@startuml
left to right direction

package Keycloak {
    class User {
    }

    class Customer {
    }

    class Organisator {
    }

    class Instructor {
    }
}

Packet -left- Appointment
Packet "*"--"1" Organisation: < owns
Organisation "1"--"*" Organisator: < leads
Hire .. (Organisation, Instructor)
Instructor -- User
Customer -- User
Organisator -- User
Offer .. (Packet, Appointment)
(Appointment, Instructor) .. AppointmentManagement
(Appointment, Customer) .. Participation
(Packet, Customer) .. Purchase

@enduml